# canonical

./: .travis.yml  CMakeLists.txt  README.md  evals.cpp  polyakov.cpp
cmake/: FindMPFR.cmake
inc/: 4d.hpp  dirac_op.hpp  gauge.hpp  io.hpp  su3.hpp
src/: 4d.cpp  dirac_op.cpp  gauge.cpp  io.cpp  su3.cpp
test/: dirac_op.cpp  su3.cpp  test_dirac_op.cpp  test_su3.cpp
